<resources>
    <string name="app_name">AppTTA</string>
    <string name="texto_es">Bienvenido a RefugiApp</string>
    <string name="texto_ar">مرحبا بكم في المأوى</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Login</string>
    <string name="register">Registrar</string>
    <string name="passwordCheck">Repita contraseña</string>
    <string name="CampoVacio">Existen campos sin rellenar, vuelve a grabar audio</string>
    <string name="sinImplementar">Estamos trabajando en ello</string>
    <string name="noCoincide">No coinciden las contraseñas introducidas</string>
    <string name="Menu">Entrar</string>
    <string name="Policia">Policía</string>
    <string name="Ayuntamiento">Ayuntamiento</string>
    <string name="Supermercado">Supermercado</string>
    <string name="Panaderia">Panadería</string>
    <string name="Estacion">Estación</string>
    <string name="Farmacia">Farmacia</string>
    <string name="Hospital">Hospital</string>
    <string name="incorrecto">Usuario o contraseña incorrectos</string>
    <string name="registroFallido">Registro de usuario fallido</string>
    <string name="exito">Registrado con éxito</string>
    <string name="RememberPass">Recordar contraseña</string>
    <string name="RefiguApp">RefugiApp</string>
    <string name="LoginLabel">Login</string>
    <string name="RegistroLabel">Registro</string>
    <string name="fraseEs">Introduzca frase en español</string>
    <string name="fraseEsp">Frase en Español</string>
    <string name="fraseAr">Introduzca frase en Árabe</string>
    <string name="fraseArb">Frase en Árabe</string>
    <string name="enviar">Enviar</string>
    <string name="Propio">Frases Propias</string>
    <string name="RegistrarFrase">Registrar frase</string>
    <string name="exitoFrase">Registro de frase con éxito</string>
    <string name="registroFallidoFrase">Registro de frase fallido</string>
    <string name="title_activity_maps">Google Maps</string>
    <string name="noMicrophone">No hay micrófono</string>
    <string name="Nofrases">No existen frases todavía</string>
    <string name="localizacion_actual">Localización actual</string>
    <string name="sinLocalizacion">Sin localización, mostrando ETSIB</string>
    <string name="conLocalizacion">Con localización. Obteniendo última posición conocida</string>
    <string name="encontrados">Encontrados</string>
    <string name="carpeta">Introduce carpeta</string>
    <string name="grabador">Introduce el nombre del grabador</string>
    <string name="ejemploGrabador">Ejemplo: SoundRecorder</string>

</resources>
