<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tta.ehu.eus.apptta.PhraseRegisterActivity">


    <Button
        android:id="@+id/botonRegistrarFrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="registerPhrase"
        android:text="Enviar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fraseEs"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/fraseEsp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fraseEsp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fraseAr"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/fraseArb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fraseArb" />

    <RadioGroup android:id="@+id/RG"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton android:id="@+id/op1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Policia" />

        <RadioButton android:id="@+id/op2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ayuntamiento" />

        <RadioButton android:id="@+id/op3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Supermercado" />

        <RadioButton android:id="@+id/op4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Panaderia" />

        <RadioButton android:id="@+id/op5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Estacion" />

        <RadioButton android:id="@+id/op6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Farmacia" />

        <RadioButton android:id="@+id/op7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hospital" />
    </RadioGroup>





</LinearLayout>
