<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Presentador.Activities.LoginActivity">


    <EditText
        android:id="@+id/TxtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/account"
        android:hint="@string/user"
        android:inputType="text"
        android:textColorHint="@color/LightGrey" />
    <EditText
        android:id="@+id/TxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/keyvariant"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/LightGrey" />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RememberPass"
        android:id="@+id/box1"
        android:checked="false"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login"
            android:drawablePadding="5dp"
            android:onClick="login"
            android:text="@string/login" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/accountplus"
            android:drawablePadding="5dp"
            android:onClick="register"
            android:text="@string/register" />


    </LinearLayout>


</LinearLayout>
