<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/SV">

    <LinearLayout
        android:id="@+id/Linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="tta.ehu.eus.apptta.MenuActivity">

        <android.support.v7.widget.CardView
            android:id="@+id/card_1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:onClick="content"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="10dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/policia" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#8c000000"
                android:padding="10dp"
                android:text="@string/Policia"
                android:textColor="#ffe3e3e3"
                android:textSize="30sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:onClick="content"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="10dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ayuntamiento" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#8c000000"
                android:padding="10dp"
                android:text="@string/Ayuntamiento"
                android:textColor="#ffe3e3e3"
                android:textSize="30sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:onClick="content"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="10dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/supermercado" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#8c000000"
                android:padding="10dp"
                android:text="@string/Supermercado"
                android:textColor="#ffe3e3e3"
                android:textSize="30sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_4"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:onClick="content"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="10dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/panaderia" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#8c000000"
                android:padding="10dp"
                android:text="@string/Panaderia"
                android:textColor="#ffe3e3e3"
                android:textSize="30sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_5"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:onClick="content"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="10dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/estacion" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#8c000000"
                android:padding="10dp"
                android:text="@string/Estacion"
                android:textColor="#ffe3e3e3"
                android:textSize="30sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_6"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:onClick="content"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="10dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/farmacia" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#8c000000"
                android:padding="10dp"
                android:text="@string/Farmacia"
                android:textColor="#ffe3e3e3"
                android:textSize="30sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_7"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:onClick="content"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="10dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/hospital" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#8c000000"
                android:padding="10dp"
                android:text="@string/Hospital"
                android:textColor="#ffe3e3e3"
                android:textSize="30sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>